--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <head>
-<body background="joinbg.jpg">
+<body background="joinbg.JPG">
 	<title>GUIDE TO LOSE WEIGHT</title>
 
 </head>
