--- a/mainy.html
+++ b/mainy.html
@@ -40,7 +40,7 @@ background-color: red;
 <div id="header">
    <h1 class="style1" id="header" style="color:yellow" align="center"; >LOSE WEIGHT IN JUST 30 DAYS</h1>
  </div>
- <img src = "fit.jpg" alt="fitness" width="600" height="400">
+ <img src = "fit.JPG" alt="fitness" width="600" height="400">
 			
 </body>
 </html>
