--- a/index.html
+++ b/index.html
@@ -1,41 +1,35 @@
 <!DOCTYPE html>
-<html>
-<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<html lang="en">
 <head>
-<body background="joinbg.jpg">
-	<title>GUIDE TO LOSE WEIGHT</title>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PROJECT PROPOSAL</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 
-
-
-    <div class="container"> 
-    	
-    	<h1>JOIN US AND BECOME PHISICALLY FIT</h1>
-		
-		<a href="mainy.html">
-			<button>START</button>
-		</a> 
-    </div> 
-</body>
-</html>
-
-<script type="text/javascript">
-
-function red(){
-	document.bgcolor="red";
-}
-
-<input type="button" class= "button" value="red" onclick="red()">
-</script> 
-<style> 
-
-.container 
-{ 
-width: 80%; 
-text-align:center;
-font-size: 30PX;
-forecolor: yellow;
-} 
-
-</style>
+<body class="main">
+    <header>
+        <a href="index.html" class="logo">Healthy Life</a>
+        <nav>
+          <ul class="menu">
+                <li><a href="exercise.html">Exercises</a></li>
+                <li><a href="quotes.html">Quotes</a></li>
+                <li><a href="About.html">About us</a></li>
+				<li><a href="contact.html">Contact us</a></li>
+            </ul>
+        </nav>
+    </header>
+        <div class="home">
+            <div class="box">
+                <div class="photos">
+                </div>
+                <div class="name">
+					<h1 style="color: blue";>Healthy Life</h1>
+					<p> We aim to let everyone live a healthy life by providing exercises guide. A healthy living brings happines.
+						</p>
+					</div>
+			   
+			</div>
+			</div>
+		</body>
+		</html>
